--- a/build_production/index.html
+++ b/build_production/index.html
@@ -4,23 +4,23 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="canonical" href="https://colinmcatee.com">
-        <meta name="description" content="Personal website and blog for ProductiveRecruit founder, and software engineer Colin McAtee">
+        <meta name="description" content="Personal blog for ProductiveRecruit founder, and software engineer Colin McAtee">
         <title>Colin McAtee</title>
         <meta name="og:title" content="Colin McAtee"/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://colinmcatee.com"/>
         <meta property="og:site_name" content="ProductiveRecruit"/>
-        <meta name="og:image" content="/assets/images/cm-meta-img.png"/>
-        <meta property="og:description" content="Personal website and blog for ProductiveRecruit founder, and software engineer Colin McAtee"/>
-        <meta name="twitter:description" content="Personal website and blog for ProductiveRecruit founder, and software engineer Colin McAtee"/>
+        <meta name="og:image" content="https://colinmcatee.com/assets/images/cm-meta.png"/>
+        <meta property="og:description" content="Personal blog for ProductiveRecruit founder, and software engineer Colin McAtee"/>
+        <meta name="twitter:description" content="Personal blog for ProductiveRecruit founder, and software engineer Colin McAtee"/>
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:site" content="@colin_mcatee"/>
         <meta name="twitter:creator" content="@colin_mcatee"/>
         <meta name="twitter:title" content="Colin McAtee"/>
         <meta name="twitter:url" content="https://colinmcatee.com"/>
         <meta name="theme-color" content="#3A86FF"/>
-        <meta content="/assets/images/cm-meta-img.png" property="og:image">
-        <meta content="/assets/images/cm-meta-img.png" name="twitter:image:src">
+        <meta content="https://colinmcatee.com/assets/images/cm-meta.png" property="og:image">
+        <meta content="https://colinmcatee.com/assets/images/cm-meta.png" name="twitter:image:src">
         <meta content="summary_large_image" name="twitter:card">
         <meta content="1200" name="og:image:width">
         <meta content="630" name="og:image:height">
@@ -31,7 +31,9 @@
             href="/assets/images/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16"
             href="/assets/images/favicon-16x16.png">
-                    <script src="https://cdn.usefathom.com/script.js" data-site="MLAQMQCX" defer></script>
+                    <!-- Fathom - beautiful, simple website analytics -->
+            <script src="https://cdn.usefathom.com/script.js" data-site="CAJXZETM" defer></script>
+            <!-- / Fathom -->
                 <link rel="stylesheet" href="/assets/build/css/main.css?id=79a64ecee9e61541f9969c292a72995d">
         <script defer src="/assets/build/js/main.js?id=2cbc2cfb025f35615d2caec8fc0c553e"></script>
             </head>
